--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock.Themes.Aero/Theme.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock.Themes.Aero/Theme.xaml
@@ -1314,10 +1314,10 @@
     <Setter Property="BorderBrush"
             Value="{DynamicResource {x:Static avalonDockAero:AeroColors.BaseColor14Key}}" />
     <Setter Property="BorderThickness"
-            Value="1" />
+            Value="3" />
     <Setter Property="shell:WindowChrome.WindowChrome">
       <Setter.Value>
-        <shell:WindowChrome ResizeBorderThickness="10"
+        <shell:WindowChrome ResizeBorderThickness="{Binding ResizeBorderThickness, RelativeSource={RelativeSource AncestorType={x:Type avalonDockControls:LayoutDocumentFloatingWindowControl}}}"
                             CaptionHeight="18"
                             CornerRadius="3"
                             GlassFrameThickness="0"
@@ -1491,10 +1491,10 @@
     <Setter Property="BorderBrush"
             Value="{DynamicResource {x:Static avalonDockAero:AeroColors.BaseColor16Key}}" />
     <Setter Property="BorderThickness"
-            Value="4" />
+            Value="3" />
     <Setter Property="shell:WindowChrome.WindowChrome">
       <Setter.Value>
-        <shell:WindowChrome ResizeBorderThickness="10"
+        <shell:WindowChrome ResizeBorderThickness="{Binding ResizeBorderThickness, RelativeSource={RelativeSource AncestorType={x:Type avalonDockControls:LayoutAnchorableFloatingWindowControl}}}"
                             CaptionHeight="18"
                             CornerRadius="7"
                             GlassFrameThickness="0" />
