--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/CheckComboBox/Themes/Aero2.NormalColor.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/CheckComboBox/Themes/Aero2.NormalColor.xaml
@@ -26,6 +26,7 @@
   <conv:InverseBoolConverter x:Key="InverseBoolConverter" />
   <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
 
+
   <Geometry x:Key="DownArrowGeometry">M 0,1 C0,1 0,0 0,0 0,0 3,0 3,0 3,0 3,1 3,1 3,1 4,1 4,1 4,1 4,0 4,0 4,0 7,0 7,0 7,0 7,1 7,1 7,1 6,1 6,1 6,1 6,2 6,2 6,2 5,2 5,2 5,2 5,3 5,3 5,3 4,3 4,3 4,3 4,4 4,4 4,4 3,4 3,4 3,4 3,3 3,3 3,3 2,3 2,3 2,3 2,2 2,2 2,2 1,2 1,2 1,2 1,1 1,1 1,1 0,1 0,1 z</Geometry>
 
   <Style x:Key="ComboBoxToggleButton"
@@ -71,7 +72,7 @@
                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                        HorizontalScrollBarVisibility="Hidden"
-                       VerticalScrollBarVisibility="Hidden" >
+                       VerticalScrollBarVisibility="Hidden">
               </TextBox>
               <Grid Grid.Column="1"
                     HorizontalAlignment="Right"
@@ -129,7 +130,8 @@
     </Setter>
   </Style>
 
-  <Style TargetType="{x:Type local:CheckComboBox}">
+  <Style x:Key="CheckComboBox"
+         TargetType="{x:Type local:CheckComboBox}">
     <Setter Property="Foreground"
             Value="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}" />
     <Setter Property="Background"
@@ -186,7 +188,7 @@
                       <StackPanel>
                         <prim:SelectAllSelectorItem x:Name="PART_SelectAllSelectorItem"
                                                     Content="{TemplateBinding SelectAllContent}"
-                                                    Visibility="{Binding IsSelectAllActive, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                                                    Visibility="{Binding IsSelectAllActive, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}" />
                         <ItemsPresenter x:Name="PART_ItemsPresenter"
                                         KeyboardNavigation.DirectionalNavigation="Contained"
                                         SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
@@ -230,9 +232,12 @@
       <Trigger Property="IsEditable"
                Value="True">
         <Setter Property="IsTabStop"
-                Value="False"/>
+                Value="False" />
       </Trigger>
     </Style.Triggers>
   </Style>
+
+  <Style TargetType="{x:Type local:CheckComboBox}"
+         BasedOn="{StaticResource CheckComboBox}" />
 
 </ResourceDictionary>
